--- a/index.html
+++ b/index.html
@@ -24,428 +24,12 @@
 
 <body ng-controller="CalculatorCtrl">
 
+<nav>
 
-<p class="print" >
-ООО «Авто-дилер»<br />
-Москва, ул. Ленина, 31<br />
-+7 495 212 85 06<br />
-<br />
-Ваш менеджер — Констанин Константинопольский<br />
-+7 906 212 85 06<br />
-
-</p>
-
-
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="brand" href="#"><img src="img/neoflex-logo.png"/>&nbsp;&nbsp;Супер Кредитный калькулятор</a>
-
-            <div class="buttons">
-                <a href="#" class="btn"><i class="icon-briefcase"></i>&nbsp;Сохранить</a>
-                <a href="javascript:window.print();return false;" class="btn"><i
-                        class="icon-print"></i>&nbsp;Печатать</a>
-
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-<div class="choose-car">
-
-
-    <h4>Выбор автомобиля </h4>
-
-    <form class="filters form-inline" ng-controller="CarConfigurationCtrl">
-
-
-        <div>
-			<span class="btn-group" data-toggle="buttons-radio">
-				 <button type="button" class="btn ng-class: {'active': !car.used}"
-                         ng-click="car.used=false;updateMark()">Новый
-                 </button>
-				 <button type="button" class="btn ng-class: {'active': car.used}" ng-click="car.used=true;updateMark()">
-                     С пробегом
-                 </button>
-			</span>
-
-
-        </div>
-
-        <div class="row-fluid">
-
-            <div class="span3"> Марка
-                <select size="7" class="input-medium"
-                        ng-model="car.markId"
-                        ng-options="mark.id as mark.name for mark in selMarkList"
-                        ng-change="updateModel()"
-                        >
-                    <option value="">Любая</option>
-                </select>
-            </div>
-
-
-            <div class="span3"> Модель
-                <select size="7" class="input-medium" ng-model="car.modelId"
-                        ng-options="model.id as model.name for model in selModelList"
-                        ng-change="updatePackaging()"
-                        >
-                    <option value="">Любая</option>
-                </select>
-            </div>
-
-
-            <div class="span3"> Комплектация
-                <select size="7" class="input-medium" ng-model="car.packagingId"
-                        ng-options="pack.id as pack.name for pack in selPackagingList"
-                        ng-change="updateYear()"
-                        >
-                    <option value="">Любая</option>
-                </select>
-            </div>
-
-
-            <div class="span3"> Год
-                <select size="7" class="input-medium" ng-model="car.yearId"
-                        ng-options="year.yearId as year.yearId for year in selYearList"
-                        >
-                    <option value="">Любой</option>
-                </select>
-            </div>
-        </div>
-
-
-    </form>
-</div>
-
-
-<h4 class="noprint">Подбор кредитных программ</h4>
-
-<div ng-controller="LoanProgramSelectionCtrl">
-
-
-<div class="row-fluid filters noprint">
-    <div class="span4">
-
-        <div class="control-group">
-            <table>
-                <tr>
-                    <td>
-                        <label>Стоимость машины</label>
-
-                        <div slider min="250000" max="3000000" step="50000" ng-model="car.price"></div>
-                    </td>
-
-                    <td class="input">
-
-                        <input maxlength="7" type="text" class="input-mini" ng-model="car.price">&nbsp;руб.
-                    </td>
-                </tr>
-            </table>
-
-        </div>
-
-    </div>
-
-
-    <div class="span4">
-
-        <div class="control-group">
-
-            <table>
-                <tr>
-                    <td>
-                        <label>Первоначальный взнос</label>
-
-                        <div slider min="0" max="car.price" step="25000" ng-model="initialPayment"></div>
-                    </td>
-
-
-                    <td class="input">
-                        <span style="width:36px;display:inline-block;">{{initialPaymentPercent | number}}%</span>
-                        <input type="text" id="handsel-money-input" class="input-mini" ng-model="initialPayment">&nbsp;руб.
-
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </div>
-
-    <div class="span4">
-        <div class="control-group">
-            <table>
-                <tr>
-                    <td>
-                        <label>Срок</label>
-
-                        <div slider min="3" max="36" step="3" ng-model="months"></div>
-                    </td>
-
-                    <td class="input">
-
-                        <input maxlength="2" type="text" ng-model="months" style="width:20px">&nbsp;мес.
-                    </td>
-                </tr>
-            </table>
-
-        </div>
-    </div>
+</nav>
+<div>
 
 </div>
-
-<br/>
-
-<div class="row-fluid noprint" ng-show="currentOfferList.length==0">
-    <p>Программы не найдены, попробуйте другие условия.</p>
-</div>
-<div class="row-fluid noprint" ng-show="currentOfferList.length>0">
-    <p><span>Программ найдено: {{currentOfferList.length}}.</span><span ng-show="currentOfferList.length>4"> Отображены 4 варианта с минимальной переплатой.</span>
-    </p>
-</div>
-
-
-<div class="row-fluid credit-offers" ng-show="currentOfferList.length > 0">
-
-    <div class="span3" ng-repeat="offer in currentOfferList">
-        <div class="credit-offer" ng-controller="OfferCtrl">
-            <div class="flip-container ng-class: {'hover': isFlip}" ng-controller="FlipCtrl">
-
-                <div class='terms-container'>
-                    <div class='main-terms'>
-                        <div class="flip-inner">
-                            <h3>{{offer.name}}</h3>
-
-                            <span class="monthly-payment">{{offer.monthPayment | number:0}} руб./мес</span>
-
-                            <!--
-                            <h3>Стоимость машины: {{offer.price  | currency}}</h3>
-                            <h3>Первоначальный платеж: {{offer.initialPayment  | currency}}</h3>-->
-
-
-                            <table>
-                                <tr>
-                                    <th>Сумма кредита</th>
-                                    <td>{{offer.creditValue | number:0}} руб.</td>
-                                </tr>
-
-
-                                <tr>
-                                    <th>Итоговая ставка</th>
-                                    <td>{{offer.rate}} %</td>
-                                </tr>
-
-
-                                <tr>
-                                    <th>Стоимость кредита</th>
-                                    <td>{{offer.returnValue | number:0 }} руб.</td>
-                                </tr>
-
-                            </table>
-
-                            <div class='options-list'>
-                                <div class="option ng-class: {'checked': service.selected}"
-                                     ng-repeat="service in serviceList">
-                                    <label class="checkbox"><input type="checkbox" ng-model="service.selected"
-                                                                   ng-disabled="service.mandatory"
-                                                                   ng-click="updateOffer()"/> {{service.name}} </label>
-                                    <span class="price"><div ng-show="service.ctype=='fixed'">+ {{service.cost |
-                                        number:0}} руб.
-                                    </div><div ng-show="service.ctype!='fixed'">+ <input class="input-mini"
-                                                                                         ng-model="service.cost"
-                                                                                         ng-change="updateOffer()"> руб.
-                                    </div></span>
-                                </div>
-                            </div>
-
-                            <a class='rotate' ng-click="flip()"></a>
-                        </div>
-                    </div>
-                    <div class="extra-terms">
-                        <div class="flip-inner">
-                            <h3>{{offer.name}} —
-                                <small>информация</small>
-                            </h3>
-
-
-                            <div class='options-list'>
-                                <table>
-
-                                    <tr>
-                                        <th>Банковская ставка</th>
-                                        <td>{{offer.rate |number:2}} %</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Маркетинговая ставка</th>
-                                        <td>{{0 |number:2}} %</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Переплата</th>
-                                        <td>{{offer.overPayment | number:2}} руб.</td>
-                                    </tr>
-
-                                    <tr>
-                                        <th>Скидка производителя</th>
-                                        <td><input class="input-mini" ng-model="offer.discount" ng-change="updateOffer()"> руб.</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Скидка дилера</th>
-                                        <td><input class="input-mini"  ng-model="offer.dealerDiscount" ng-change="updateOffer()"> руб.</td>
-                                    </tr>
-
-                                    <tr>
-                                        <th>Доп. сервисы</th>
-                                        <td>{{offer.serviceValue | number:0}} руб.</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Скидка на доп. сервисы</th>
-                                        <td><input class="input-mini" ng-model="offer.serviceDiscount" ng-change="updateOffer()"> руб.</td>
-                                    </tr>
-
-                                    <tr>
-                                        <th>Платеж за автомобиль</th>
-                                        <td>{{offer.carMonthPayment | number:0}} руб.</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Платеж за доп. сервисы</th>
-                                        <td>{{offer.serviceMonthPayment | number:0}} руб.</td>
-                                    </tr>
-
-
-                                </table>
-                            </div>
-
-                            <a class='rotate' ng-click="flip()"></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <button class='btn add-to-compare' ng-click="addToSelectedOfferList($index)">Добавить к сравнению
-            </button>
-        </div>
-    </div>
-
-
-</div>
-
-
-<div class="clearfix"></div>
-<div ng-show="selectedOfferList.length>0" class="row-fluid">
-    <h4>Сравнение вариантов</h4>
-
-    <table class='offers-comparison'>
-        <tr class='offer-name'>
-            <td>&nbsp;</td>
-            <td ng-repeat="selectedOffer in selectedOfferList">{{selectedOffer.name}}<a href="" class="delete-offer"
-                                                                                        ng-click="removeFromSelectedOfferList($index)"></a>
-            </td>
-        </tr>
-        <tr class='offer-sum row-price'>
-            <th>Ежемесячный платеж</th>
-            <td ng-repeat="selectedOffer in selectedOfferList">{{selectedOffer.monthPayment | number:0}} руб./мес.</td>
-        </tr>
-        <tr class='offer-sum row-price'>
-            <th>Сумма кредита</th>
-            <td ng-repeat="selectedOffer in selectedOfferList">{{selectedOffer.creditValue | number:0}} руб.</td>
-        </tr>
-        <tr class='offer-term row-price'>
-            <th>Срок кредита</th>
-            <td ng-repeat="selectedOffer in selectedOfferList" class='offer-term'>{{selectedOffer.months}} мес</td>
-        </tr>
-        <tr class='offer-sum row-price'>
-            <th>Ставка</th>
-            <td ng-repeat="selectedOffer in selectedOfferList" class='offer-sum'>{{selectedOffer.rate}} мес</td>
-        </tr>
-        <tr class='offer-return row-price'>
-            <th>Сумма к возврату</th>
-            <td ng-repeat="selectedOffer in selectedOfferList" class='offer-sum'>{{selectedOffer.returnValue |
-                number:0}} руб.
-            </td>
-        </tr>
-        <tr class='offer-return row-price'>
-            <th>Сумма переплаты</th>
-            <td ng-repeat="selectedOffer in selectedOfferList" class='offer-sum'>{{selectedOffer.overPayment |
-                number:0}} руб.
-            </td>
-        </tr>
-
-        <tr class='offer-return row-price'>
-            <th>Стоимость доп. сервисов</th>
-            <td ng-repeat="selectedOffer in selectedOfferList" class='offer-sum'>{{selectedOffer.serviceValue |
-                number:0}} руб.
-            </td>
-        </tr>
-
-
-        <tr class='group'>
-            <th>Требования к заемщику</th>
-            <td ng-repeat="selectedOffer in selectedOfferList"></td>
-        </tr>
-
-        <tr class='row-icon'>
-            <th>Гражданство РФ</th>
-            <td ng-repeat="selectedOffer in selectedOfferList">
-                <img src="img/yes.png" tooltip="Требуется" />
-            </td>
-        </tr>
-
-        <tr class='row-icon'>
-            <th>Домашний телефон</th>
-            <td ng-repeat="selectedOffer in selectedOfferList">
-                <img src="img/no.png" tooltip="Не требуется" />
-            </td>
-        </tr>
-
-        <tr class='row-icon'>
-            <th>Мобильный телефон</th>
-            <td ng-repeat="selectedOffer in selectedOfferList">
-                <img src="img/yes.png" tooltip="Требуется" />
-            </td>
-        </tr>
-
-
-        <tr class='group'>
-            <th>Список документов</th>
-            <td ng-repeat="selectedOffer in selectedOfferList"></td>
-        </tr>
-
-        <tr class='row-icon'>
-            <th>Паспорт РФ</th>
-            <td ng-repeat="selectedOffer in selectedOfferList">
-                <img src="img/yes.png" tooltip="Требуется" />
-            </td>
-        </tr>
-
-        <tr class='row-icon'>
-            <th>ПТС</th>
-            <td ng-repeat="selectedOffer in selectedOfferList">
-                <img src="img/no.png" ng-show="!selectedOffer.car.used" tooltip="Не требуется" />
-                <img src="img/yes.png" ng-show="selectedOffer.car.used" tooltip="Требуется" />
-            </td>
-        </tr>
-
-        <tr class="noprint">
-            <th></th>
-            <td ng-repeat="selectedOffer in selectedOfferList">
-                <button class='btn btn-large' ng-click="process($index)">Оформить</button>
-            </td>
-        </tr>
-
-    </table>
-</div>
-
-
-</div>
-</div>
-<!-- /container -->
-
-
 <script type="text/javascript" src="js/jquery/jquery-1.10.1.min.js"></script>
 <!--<script type="text/javascript" src="js/jquery/jquery-1.6.2.min.js"></script>-->
 
@@ -464,7 +48,6 @@
 <script type="text/javascript" src="js/app/controllers.js"></script>
 <script type="text/javascript" src="js/app/directives.js"></script>
 <script type="text/javascript" src="js/app/services.js"></script>
-
 
 
 </body>
